# refarm

./: .env.example  .gitignore  .markdownlint.json  .npmrc  AGENTS.md  BOOTSTRAP.md  CNAME  CONTRIBUTING.md  HANDOFF.md  README.md  SECURITY.md  _config.yml  eslint.config.mjs  final-report.md  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  refarm.config.json  rust-toolchain.toml  tsconfig.json  turbo.json  vitest.config.d.ts  vitest.config.js  vitest.config.ts
.cargo/: config.toml
.changeset/: README.md  channel-policy-v1.md  config.json  credentials-t2-handoff.md  dispatch-surface-external-api.md  ds-token-contract.md  ds-verde-jardim-light-mode.md  heartwood-vault-seed-ready.md  homestead-ssr-tier.md  identity-v1-session-derivation.md  initial-contracts-release.md  launch-process-leaf.md  process-handoff-leaf.md  release-engine-vault-seed-ready.md  requirements-supply-t3.md  silo-collection-contract.md  silo-consumer-storage-surface.md  silo-forward-safe-envelope-read.md  silo-trim-unused-ed25519.md  skill-contract-v1.md  source-contract-v1.md  source-git.md  source-local.md  worker-tool-readiness.md
.devcontainer/: Dockerfile  devcontainer-lock.json  devcontainer.json  farm  farm-fix.md  post-create.sh  post-start.sh
.github/: PULL_REQUEST_TEMPLATE.md  PULL_REQUEST_TEMPLATE_UI.md  README.md  WORKFLOWS.md
.project/: automations.json  conformance-reference.json  decisions.json  domain.json  handoff.json  issues.json  project.json  rationale.json  requirements.json  tasks.json  verification.json
.refarm/: config.json
codemods/: README.md  ds-token-adoption.mjs  ds-token-adoption.test.mjs  node-test-to-vitest.mjs  node-test-to-vitest.test.mjs  package-workspace-adoption.mjs  package-workspace-adoption.test.mjs  registry.json  registry.test.mjs
docs/: A11Y_I18N_GUIDE.md  ADR-A2A.md  AGENT_TRACTOR_INTEGRATION.md  APPS_REFARM_PROMOTION_LEDGER.md  ARCHITECTURE.md  ARCHITECTURE_IDENTITY.md  ARCHITECTURE_SOVEREIGNTY.md  AUTOMATION_BOUNDARIES.md  BRANCH_PROTECTION_SETUP.md  COLONY_NEXT_BATCH.md  COLONY_PLAYBOOK.md  CONFORMANCE_V1_INVENTORY.md  (+103 more)
templates/rust-plugin/: Cargo.toml  README.md  package.json
templates/rust-plugin/src/: bindings.rs  lib.rs
validations/simple-wasm-plugin/: Cargo.toml  README.md  package.json
validations/simple-wasm-plugin/.cargo/: config.toml
validations/simple-wasm-plugin/src/: lib.rs
validations/simple-wasm-plugin/wit/: refarm-plugin.wit
validations/wasm-plugin/hello-world/: Cargo.toml  README.md  package.json
validations/wasm-plugin/hello-world/src/: bindings.rs  lib.rs
validations/wasm-plugin/hello-world/wit/: refarm-sdk.wit
(+1182 files in other folders)
