[package]
name = "rust-plugin-template"
version = "0.1.0"
edition = "2024"
license = "MIT"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
# Standard WASI dependencies
# wit-bindgen will be used to generate bindings from our WIT
wit-bindgen = "0.41.0"
wit-bindgen-rt = "0.41.0"

[package.metadata.component]
package = "refarm:plugin"

[package.metadata.component.target]
path = "wit"
world = "refarm-plugin"
