[package]
name = "refarm-hello-world-plugin"
version = "0.1.0"
edition = "2021"
description = "Example WASM plugin for the Refarm ecosystem"
license = "AGPL-3.0-only"
repository = "https://github.com/refarm-dev/refarm"
homepage = "https://refarm.dev"

[lib]
crate-type = ["cdylib"]

[dependencies]
wit-bindgen = "0.41.0"
wit-bindgen-rt = "0.41.0"

[package.metadata.component]
package = "refarm:hello-world"

[package.metadata.component.target]
path = "wit"

# Build targets: see docs/RUST_WINDOWS_TROUBLESHOOTING.md
# Opções:
# - wasm32-unknown-unknown (simples, genérico)
# - wasm32-wasip1 (com WASI Preview 1, usado por cargo-component)
